--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -14,7 +14,7 @@
 }
 
 header {
-  font-family: Rubik;
+  @include font-bdo-grotesk-demi-bold;
   font-size: 12px;
   font-style: normal;
   font-weight: 500;
@@ -66,7 +66,6 @@ header {
     position: relative;
     cursor: pointer;
     z-index: 1;
-
   }
 
   .svg_wrapper {
@@ -81,16 +80,15 @@ header {
   }
 
   .home-button {
-    transform: scale(0);
-    animation: home-button-show 400ms var(--easing-expo) forwards;
+    transition: transform 600ms var(--ease-in-out-expo);
   }
-  @keyframes home-button-show {
-    0% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(1);
-    }
+
+  .home-button.enabled {
+    transform: scale(1);
+  }
+
+  .home-button.disabled {
+    transform: scale(0);
   }
 
   .home_svg {
@@ -110,7 +108,6 @@ header {
   }
 
   .svg-inner_div {
-
     &.light {
       transform: translateY(0px) translateZ(0);
     }
@@ -137,7 +134,7 @@ header {
           position: relative;
           backface-visibility: hidden;
           -webkit-transform-style: preserve-3d;
-          transform-style:preserve-3d;
+          transform-style: preserve-3d;
         }
       }
     }
