--- a/src/style/image-loading.scss
+++ b/src/style/image-loading.scss
@@ -11,6 +11,7 @@
     margin: 0 auto;
     width: 100%;
     height: auto;
+    color: transparent;
   }
 }
 
@@ -36,6 +37,7 @@ positioned over the image.
 .img-main.visible {
   img {
     position: relative;
+    color:saddlebrown;
   }
   .placeholder {
     position: absolute;
