--- a/src/style/info-textbox.scss
+++ b/src/style/info-textbox.scss
@@ -4,18 +4,21 @@
   font-size: 16px;
   color: var(--text-color);
   line-height: 140%;
-  letter-spacing: 0.32px;
-  h4 {
+  letter-spacing: 0.05em;
+  h3 {
+    @include font-bdo-grotesk-demi-bold;
     font-weight: 500;
   }
   p {
+    @include font-bdo-grotesk-light;
     font-weight: 300;
   }
   ul {
     margin: 5px 0 0;
     li {
+      @include font-bdo-grotesk-light;
       padding: 0;
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 300;
       color: var(--challenge-list-item);
     }
@@ -23,8 +26,9 @@
   ol {
     margin: 5px 0 0;
     li {
+      @include font-bdo-grotesk-light;
       padding: 0;
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 300;
       color: var(--text-color);
       margin: 10px 0;
