--- a/src/style/landing-project.scss
+++ b/src/style/landing-project.scss
@@ -7,14 +7,16 @@ section.landing-projects_section {
 article.landing-project_card {
   display: block;
   h3 {
-    font-size: 16px;
-    font-weight: 400;
+    @include font-bdo-grotesk-demi-bold;
+    font-size: 1rem;
     line-height: 140%;
+    margin-top: 10px
   }
   p {
-    font-size: 14px;
-    font-weight: 300;
+    @include font-bdo-grotesk-regular;
+    font-size: 0.875rem;
     line-height: 140%;
+    letter-spacing: 0.05em;
   }
   &.card--one,
   &.card--two {
@@ -28,31 +30,24 @@ article.landing-project_card {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(6, 1fr);
-    border-radius: 5% / 9%;
+    border-radius: 4px;
     background: var(--project-back);
     padding: 20px;
     .landing-project_card-text {
       padding-top: 10px;
     }
     h3 {
-      font-size: 20px;
-      font-weight: 300;
+      font-size: 1.25rem;
     }
     p {
       margin-top: 5px;
-      font-size: 16px;
-      letter-spacing: 0.32px;
-    }
-    &.card--one {
-      .img-main img {
-        border-radius: 5.5% / 7%;
-        border-bottom-right-radius: 0;
-      }
+      font-size: 1rem;
+      letter-spacing: 0.05em;
     }
 
     &.card--one,
     &.card--three {
-      padding-right: 30px;
+      padding-right: 35px;
       .landing-project_card-text {
         grid-column: 5 / -1;
         grid-row: 1 / -1;
@@ -83,18 +78,21 @@ article.landing-project_card {
 @include desktop {
   article.landing-project_card {
     h3 {
-      font-size: 30px;
       font-size: clamp(20px, 1.75vw, 30px);
     }
     p {
-      font-size: 20px;
       font-size: clamp(16px, 1.05vw, 20px);
     }
+    &.card--one {
+      padding-right: 45px;
+    }
     &.card--two {
-      border-radius: 4.5% / 8%;
+      // border-radius: 4.5% / 8%;
+      padding-left: 40px;
     }
     &.card--three {
-      border-radius: 4.8% / 10%;
+      // border-radius: 4.8% / 10%;
+      padding-right: 45px;
     }
   }
 }
@@ -105,10 +103,9 @@ article.landing-project_card {
       transform-style: preserve-3d;
       will-change: transform;
       position: relative;
-
       transition:
         transform 80ms ease,
-        box-shadow 100ms ease;
+        box-shadow 300ms linear;
     }
     article.landing-project_card picture,
     article.landing-project_card .landing-project_card-text {
@@ -136,28 +133,32 @@ section.landing-about_section {
     width: 130px;
     height: 130px;
     position: relative;
+    opacity: 0.7;
     svg {
-      border: 2px solid var(--background-color);
       height: 100%;
       width: 100;
       border-radius: 50%;
       fill: #1e2124;
       aspect-ratio: 1;
-      background: #f5f5f5;
+      stroke-width: 20px;
+      stroke: #fafafa;
+      paint-order: stroke;
+      stroke-linecap: round;
+      // background: #f5f5f5;
     }
   }
 }
 
 .about_text {
   color: var(--text-color);
-  font-size: 18px;
-  font-weight: 300;
+  @include font-bdo-grotesk-light;
+  font-size: 1.125rem;
   line-height: 140%;
-  letter-spacing: 0.3px;
+  letter-spacing: 0.06em;
 }
 
 .about-spotify_inline a {
-  color: var(--text-accent-one);
+  color: var(--text-accent-two);
   text-decoration: underline;
 }
 section.colophon:first-of-type {
@@ -165,18 +166,19 @@ section.colophon:first-of-type {
   margin: 50px 0 0;
 }
 .about-colophon-header {
-  font-size: 15px;
+  @include font-bdo-grotesk-regular;
+  font-size: 1rem;
   margin: 50px 0 2px;
   font-weight: 400;
   color: var(--text-color);
 }
 .about-colophon-text {
-  font-size: 14px;
+  @include font-bdo-grotesk-light;
+  font-size: 0.875rem;
   margin: 0;
-  font-weight: 300;
   color: var(--text-color);
   line-height: 145%;
-  letter-spacing: 0.25px;
+  letter-spacing: 0.05em;
   & a {
     text-decoration: underline;
   }
@@ -186,45 +188,44 @@ section.colophon:first-of-type {
   section.landing-about_section {
     .landing-about_section-wrapper {
       display: grid;
-      grid-template-columns: repeat(5, 1fr);
+      grid-template-columns: repeat(7, 1fr);
       column-gap: 30px;
       row-gap: 30px;
     }
     .about_text {
-      grid-column: 1 / 4;
+      grid-column: 1 / 6;
       grid-row: 1 / -1;
     }
     .about_image_wrapper {
-      grid-column: 4 / -1;
+      grid-column: 6 / -1;
       grid-row: 1 / -1;
       margin: 0;
-      padding-left: 50%;
-      padding-bottom: 100px;
+      // padding-left: 50%;
+      // padding-bottom: 100px;
+      // opacity: 0.5;
       width: 100%;
       svg {
-        border-radius: 12px;
+        border-radius: 4px;
         width: 100%;
         height: 100%;
         height: fit-content;
       }
     }
   }
+  section.colophon:first-of-type {
+    grid-column: 1 / 6;
+  }
 }
 
 @include desktop {
   section.landing-about_section {
-    .landing-about_section-wrapper {
-      grid-template-columns: repeat(5, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-    }
     .about_text {
-      grid-column: 1 / 4;
-      grid-row: 1 / -1;
+      grid-column: 1 / 6;
     }
 
     .about_image_wrapper {
-      grid-column: 4 / -1;
-      grid-row: 1 / 4;
+      grid-column: 6 / -1;
+      // grid-row: 1 / 4;
       display: flex;
       justify-content: center;
       padding: 0;
@@ -233,7 +234,7 @@ section.colophon:first-of-type {
       background-color: var(--background-color-transp);
       svg {
         border-radius: 12px;
-        max-width: 200px;
+        // max-width: 200px;
         width: 100%;
         height: 100%;
         height: fit-content;
@@ -242,8 +243,8 @@ section.colophon:first-of-type {
     section.colophon {
       margin: 0;
       align-self: start;
-      grid-column: 1 / 4;
-      grid-row: 3 / 4;
+      grid-column: 1 / 6;
+      // grid-row: 3 / 4;
     }
   }
 }
