--- a/src/style/project-headline.scss
+++ b/src/style/project-headline.scss
@@ -3,16 +3,20 @@
 .project-headline-wrapper {
   margin: 0 2%;
   padding-top: 100px;
+  font-variant-ligatures: common-ligatures;
 
   h1 {
-    font-weight: 400;
+    @include font-bdo-grotesk-demi-bold;
     color: var(--text-color);
-    font-size: 30px;
+    font-size: 1.875rem;
+    letter-spacing: 0.0125em;
   }
-
+  
   h2 {
-    font-weight: 300;
-    font-size: 30px;
+    @include font-bdo-grotesk-demi-bold;
+    font-size: 1.875rem;
+    letter-spacing: 0.0125em;
+    line-height: 130%;
   }
   @include tablet {
     margin: 0 2%;
@@ -27,7 +31,8 @@
     padding-top: 175px;
     h1,
     h2 {
-      font-size: 55px;
+      font-size: 3.5rem;
+      line-height: 120%;
     }
   }
 }
@@ -35,7 +40,7 @@
 .project_page-image-wrapper {
   margin: 50px 2% 25px;
   @include tablet {
-    margin: 25px 2% 30px;
+    margin: 4rem 2% 2rem;
   }
 }
 
