--- a/src/style/project-page.scss
+++ b/src/style/project-page.scss
@@ -267,7 +267,6 @@
       position: absolute;
       height: 18px;
       width: 18px;
-      // border: 3px solid #42423d;
       background-color: #42423d;
       border-radius: 10px;
       transform: scale(0);
@@ -299,7 +298,6 @@
     position: absolute;
     height: 18px;
     width: 18px;
-    // border: 3px solid #42423d;
     background-color: #32ade6;
     border-radius: 10px;
     transform: scale(0);
@@ -376,7 +374,6 @@ article.section-proposal {
     }
   }
   &-two {
-    // margin-top: -9%;
     grid-row: 2 / 3;
     grid-column: 1 / 2;
     max-width: 350px;
@@ -386,7 +383,6 @@ article.section-proposal {
     }
   }
   &-three {
-    // margin-top: -9%;
     grid-row: 2 / 3;
     grid-column: 2 / 3;
     max-width: 350px;
@@ -399,17 +395,14 @@ article.section-proposal {
 
 .circuit_single_text {
   &-one {
-    // margin: 0 6%;
     grid-row: 1 / 2;
     grid-column: 2 / 3;
   }
   &-two {
-    // margin: -9% 6% 0;
     grid-row: 3 / 4;
     grid-column: 1 / 2;
   }
   &-three {
-    // margin: -9% 6% 0;
     grid-row: 3 / 4;
     grid-column: 2 / 3;
   }
@@ -418,18 +411,15 @@ article.section-proposal {
 @include tablet {
   .circuit_single_img {
     &-one {
-      // margin-top: -9%;
 
       grid-row: 1 / 2;
       grid-column: 1 / 2;
     }
     &-two {
-      // margin-top: -9%;
       grid-row: 1 / 2;
       grid-column: 2 / 3;
     }
     &-three {
-      // margin-top: -9%;
       grid-row: 1 / 2;
       grid-column: 3 / 4;
     }
@@ -437,17 +427,14 @@ article.section-proposal {
 
   .circuit_single_text {
     &-one {
-      // margin: -10% 5% 0;
       grid-row: 2 / 3;
       grid-column: 1 / 2;
     }
     &-two {
-      // margin: -10% 5% 0;
       grid-row: 2 / 3;
       grid-column: 2 / 3;
     }
     &-three {
-      // margin: -10% 5% 0;
       grid-row: 2 / 3;
       grid-column: 3 / 4;
     }
@@ -532,13 +519,13 @@ article.circuit_video-left {
     gap: 16px;
   }
   &-element {
-    font-size: 16px;
-    font-weight: 300;
+    @include font-bdo-grotesk-light;
+    font-size: 1rem;
     color: var(--text-color);
     line-height: 140%;
-    letter-spacing: 0.32px;
+    letter-spacing: 0.05em;
     span {
-      font-weight: 500;
+      @include font-bdo-grotesk-medium;
     }
   }
   @include tablet {
