--- a/src/style/section-divider.scss
+++ b/src/style/section-divider.scss
@@ -1,18 +1,18 @@
 @use "mixins.scss" as *;
 
 .section_divider {
+  @include font-bdo-grotesk-medium;
   width: 100%;
   height: fit-content;
   border-bottom: 0.75px solid var(--text-color);
   margin:0 auto 25px;
   h2 {
-    font-size: 20px;
+    font-size: 1.25rem;
     margin: 0;
     font-weight: 300;
     color: var(--text-color);
-    letter-spacing: 1px;
     @include tablet {
-      font-size: 30px;
+      font-size: 1.5rem;
       margin-left: 0;
       margin-right: 0;
       grid-column: 1 / -1;
