--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -2,10 +2,12 @@
 :root {
   --background-color: #f5f5f5;
   --background-color-transp: #f5f5f5a5;
-  --text-color: #000000;
+  --text-color: #1e2124;
   --text-color-lighter: #999999;
-  --text-accent-one: #00a8ce;
-  --project-back: #f1eee9;
+  --text-accent-one: #f25323;
+  --text-accent-two: #d13506;
+  --project-back: #f0f0f0;
+  --desc-tools-title: #6f6f6f;
   --proj-button-background: #f0f0f0;
   --proj-button-border: #cccccc;
   --word-salad-accent-one: #13952d;
@@ -27,8 +29,10 @@ html[data-color-scheme="dark"] {
   --background-color-transp: #1e212414;
   --text-color: #f5f5f5;
   --text-color-lighter: #c4c4c4;
-  --text-accent-one: #95ff00;
+  --text-accent-one: rgb(101, 189, 79);
+  --text-accent-two: rgb(101, 189, 79);
   --project-back: hsl(210, 9%, 17%);
+  --desc-tools-title: #898989;
   --proj-button-background: #2b2b2b;
   --proj-button-border: #626262;
   --word-salad-accent-one: #68d87f;
